--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
   font: 100% Helvetica, sans-serif;
 }
 
+.page-wrapper {
+  width: 1424px;
+  height: 2900px;
+}
+
 header {
   background-image: url("image/header.jpg");
   background-size: 100% 100%;
